[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "smoke-test"
path = "src/smoke-test/main.rs"

[[bin]]
name = "prime-time"
path = "src/prime-time/main.rs"


[[bin]]
name = "means-end"
path = "src/means-end/main.rs"

[[bin]]
name = "budget-chat"
path = "src/budget-chat/main.rs"

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
scopeguard = "1.1.0"
